# sentinel-brulure

./: .env_template  AGENTS.md  Makefile  README.md  project-plan.md  pyproject.toml
data_pipeline/: firm_request.py  image_utils.py  sentinel_request.py  sentinel_utils.py
planning/: firms-api-notes.md  prithvi-model-notes.md
scripts/: run_sentinel_demo.py
tests/: test_data_pipeline.py  test_sentinel_request_pytest.py
